--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
     <!-- Quote -->
     <div class="quote__text">
       <i class="fa-solid fa-quote-left"></i>
-      <span id="quote-text">要抓紧时间赶快生活，因为一场莫名其妙的疾病，或者一个意外的悲惨事件，都会使生命中断。
-      </span>
+      <span id="quote-text"></span>
     </div>
 
     <!-- Author -->
     <div class="quote__author">
-      <span id="author-text">保尔·柯察金</span>
+      <span id="author-text"></span>
     </div>
 
     <!-- Buttons -->
