添加获取名言时的加载画面

--- a/index.html
+++ b/index.html
@@ -33,5 +33,8 @@
       <button id="new-quote">New Quote</button>
     </div>
   </div>
+
+  <!-- Loading picture -->
+  <div class="loader" id="loader"></div>
 </body>
 </html>
