添加复制按钮样式和功能

--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
     </div>
 
     <!-- Buttons -->
-    <div class="quote__button">
+    <div class="quote__buttons">
       <button class="twitter-button" id="twitter">
         <i class="fa-brands fa-twitter" title="Tweet this!"></i>
       </button>
+      <button id="copy-quote"><i class="fa-solid fa-copy"></i></button>
+      <button id="copied-quote" hidden><i class="fa-solid fa-check"></i></button>
       <button id="new-quote">New Quote</button>
     </div>
   </div>
